my-apps/media/nestmtx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestmtx
  namespace: nestmtx
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "nestmtx.jrb.nz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nestmtx
          port: 2000
          weight: 1
